--- a/Algoritmos/Aula04/Atividades/Atividade09.html
+++ b/Algoritmos/Aula04/Atividades/Atividade09.html
@@ -6,27 +6,28 @@
     <title>Document</title>
 </head>
 <body>
-    
+    <p>Informe a última séria que você assistiu:</p>
+    <input type="text" id="ipt_serie">
+    <p>Informe a quantidade total de episódios que você assistiu dessa série:</p>
+    <input type="text" id="ipt_episodios">
+    <br>
+    <button onclick="calcular()">Verificar nível</button>
+    <p id="p_resultado"></p>
 </body>
 </html>
 <script>
-    
+    function calcular() {
+        let serie = ipt_serie.value;
+        let episodios = Number(ipt_episodios.value);
+
+        let calculo = episodios * 22;
+
+        let meta = 30 * 60;
+
+        p_resultado.innerHTML = `Vejo que você gosta da série ${serie}`;
+
+        if (calculo > meta) {
+            p_resultado.innerHTML += "<br>Uau, você realmente gosta dessa série!";
+        }
+    }
 </script>
-
-Estima-se que os usuários de conteúdo de Streaming gastem cerca de 100 milhões de horas por dia nesse tipo de entretenimento.  
-
-Em média um episódio de seriado americano do estilo SITCOM (Friends, How I Met Your Mother, Dois Homens e Meio, etc.) tem 22min de duração.  
-
-Sabendo disso, crie um programa o qual:  
-
-a) Peça ao usuário para informar a última série (SITCOM) que ele assistiu 
-
-b) Peça ao usuário para informar o total de episódios que ele já assistiu da série 
-
-c) Tenha um botão "Verificar nível" que exiba abaixo dele a seguinte frase:  
-
-     "Vejo que você gosta da série X"   
-
-E se o usuário já gastou mais de 30 horas na série informada, exiba também: "Uau, você realmente gosta dessa série!".  
-
-Obs: Considere 22min como o tempo de duração de 1 episódio.
